Bug 57620 - glib/demo is not compiled with warnings enabled
Summary: glib/demo is not compiled with warnings enabled
Status: RESOLVED FIXED
Alias: None
Product: poppler
Classification: Unclassified
Component: glib frontend (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: poppler-bugs
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-11-27 18:47 UTC by Hib Eris
Modified: 2012-11-28 16:52 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
0001-Enable-compiler-warnings-for-C-code.patch (1.04 KB, text/plain)
2012-11-27 18:47 UTC, Hib Eris
Details
0002-Fix-warnings-on-unused-variables.patch (1.02 KB, text/plain)
2012-11-27 18:47 UTC, Hib Eris
Details
0003-Fix-warning-on-unused-variable-selection.patch (702 bytes, patch)
2012-11-27 18:48 UTC, Hib Eris
Details | Splinter Review
0004-Do-not-use-text-uninitialized.patch (778 bytes, patch)
2012-11-27 18:48 UTC, Hib Eris
Details | Splinter Review
0005-Remove-unused-variable-region.patch (672 bytes, patch)
2012-11-27 18:49 UTC, Hib Eris
Details | Splinter Review
0006-Remove-unused-variable-slice_selector.patch (760 bytes, patch)
2012-11-27 18:49 UTC, Hib Eris
Details | Splinter Review
0007-Fix-warning-operation-on-page-may-be-undefined-Wsequ.patch (932 bytes, patch)
2012-11-27 18:49 UTC, Hib Eris
Details | Splinter Review
0008-Remove-set-but-unused-variable-textinfo.patch (1008 bytes, patch)
2012-11-27 18:50 UTC, Hib Eris
Details | Splinter Review
0009-pgd_text_view_query_tooltip-return-a-gboolean.patch (738 bytes, patch)
2012-11-27 18:50 UTC, Hib Eris
Details | Splinter Review
0010-Fix-set-but-unused-warning-in-glib-demo.patch (1.71 KB, patch)
2012-11-27 18:51 UTC, Hib Eris
Details | Splinter Review
0011-Fix-warning-on-signedness-in-glib-demo.patch (1.14 KB, patch)
2012-11-27 21:20 UTC, Hib Eris
Details | Splinter Review

Description Hib Eris 2012-11-27 18:47:04 UTC
Created attachment 70674 [details]
0001-Enable-compiler-warnings-for-C-code.patch

By default, poppler compiles with compiler warnings enabled for the C++ compiler, by settings CXXFLAGS appropriatly.
However, glib/demo use a C compiler. For that, one shoul set CFLAGS accordingly.
Comment 1 Hib Eris 2012-11-27 18:47:40 UTC
Created attachment 70675 [details]
0002-Fix-warnings-on-unused-variables.patch
Comment 2 Hib Eris 2012-11-27 18:48:07 UTC
Created attachment 70676 [details] [review]
0003-Fix-warning-on-unused-variable-selection.patch
Comment 3 Hib Eris 2012-11-27 18:48:44 UTC
Created attachment 70677 [details] [review]
0004-Do-not-use-text-uninitialized.patch
Comment 4 Hib Eris 2012-11-27 18:49:06 UTC
Created attachment 70678 [details] [review]
0005-Remove-unused-variable-region.patch
Comment 5 Hib Eris 2012-11-27 18:49:31 UTC
Created attachment 70679 [details] [review]
0006-Remove-unused-variable-slice_selector.patch
Comment 6 Hib Eris 2012-11-27 18:49:58 UTC
Created attachment 70680 [details] [review]
0007-Fix-warning-operation-on-page-may-be-undefined-Wsequ.patch
Comment 7 Hib Eris 2012-11-27 18:50:21 UTC
Created attachment 70681 [details] [review]
0008-Remove-set-but-unused-variable-textinfo.patch
Comment 8 Hib Eris 2012-11-27 18:50:52 UTC
Created attachment 70682 [details] [review]
0009-pgd_text_view_query_tooltip-return-a-gboolean.patch
Comment 9 Hib Eris 2012-11-27 18:51:14 UTC
Created attachment 70683 [details] [review]
0010-Fix-set-but-unused-warning-in-glib-demo.patch
Comment 10 Hib Eris 2012-11-27 21:20:38 UTC
Created attachment 70691 [details] [review]
0011-Fix-warning-on-signedness-in-glib-demo.patch
Comment 11 Carlos Garcia Campos 2012-11-28 16:52:20 UTC
Pushed all the patches, thanks!


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.