glib-demo: Fix warnings on unused variables

https://bugs.freedesktop.org/show_bug.cgi?id=57620